# sound-scape-explorer

./: .creatdoc.py  .gitignore  .hiddenREADME.html  CHANGELOG.md  LICENSE  NOTES.md  README.html  README.md  README.new.md  README.old.md  TODO.md  docker-compose.main.yml  docker-compose.next.yml  docker-compose.yml  eslint.config.mjs  index.html  install.sh  install_dependencies.sh  manifest.webmanifest  package.json  pnpm-lock.yaml  registerSW.js  reinstall_npm_packages.sh  release.config.cjs  release.config.js  retro.css  run-back.sh  run-front.sh  run_tests.sh  run_tests_all.sh  run_tests_audio.sh  run_tests_campaign.sh  run_tests_front.sh  run_tests_pnpm.sh  run_tests_processing.sh  run_tests_visualisation.sh  sse-venv-13.1.1.bat  sse-venv-13.1.1.sh  sse-venv-13.1.2.bat  sse-venv-13.1.2.sh  (+9 more)
processing/: .gitignore  Dockerfile  clean.sh  cli.py  compute_featstats.py  constants.py  cors_http_server.py  dicts.py  extract_features.py  install_deps_with_dev.sh  main.py  prepare.py  preventinterrupt.py  pyproject.toml  requirements-cuda.txt  requirements.txt  requirements_cpu.txt  run.py  run.sh  setup.py  sserunner.py
processing/processing/: __init__.py  cli.py  constants.py  context.py  custom.py  dtos.py  enums.py  globals.py  interfaces.py  main.py  menu.py  types.py
processing/processing/actions/: _all.py  _all_actions.py  _all_but_files.py  _all_to_groups.py  all-actions.py  all-to-groups.py  all.py  autocluster.py  b_files.py  c_groups.py  compute_requirements.py  config.py  d_autocluster.py  digest.py  e_reducers.py  export_computation_umaps.py  export_dataframe.py  export_mdm.py  extract_and_aggregate.py  extract_and_aggregate_new.py  extract_features.py  extract_v8_files_features.py  extract_v9_files_features.py  f_indicators.py  files.py  fix_audio_windows_10_7_2.py  g_volumes.py  group_features.py  groups.py  h_matrices.py  i_pairings.py  indicators.py  purge_requirements.py  reduce.py  reduce_groups.py  reducers.py  refresh_configuration.py  repack_storage.py  run_aggregations.py  run_all.py  (+37 more)
processing/processing/askers/: ask_integration.py  ask_menu.py  ask_path_csv.py  ask_path_npy.py
processing/processing/audio/: Audio.py  Spectrogram.py
processing/processing/base/: BaseBuilderIndicator.py  BaseBuilderProcessor.py  BaseConfigWriter.py
processing/processing/classes/: App.py  AudioFiles.py  BuilderCovering.py  BuilderFeature.py  BuilderIndicator.py  BuilderIndicatorAcousticComplexityIndex.py  BuilderIndicatorAcousticDiversityIndex.py  BuilderIndicatorBioAcousticIndex.py  BuilderIndicatorBioacousticsIndex.py  BuilderIndicatorEnvelopeMedian.py  BuilderIndicatorEquivalentLevel.py  BuilderIndicatorFrequencyEntropy.py  BuilderIndicatorNormalizedDifferenceSoundscapeIndex.py  BuilderIndicatorTemporalEntropy.py  BuilderIndicatorTemporalLeq.py  BuilderIndicatorTemporalMedian.py  BuilderIndicators.py  BuilderUMAP.py  BuilderVolume.py  Config.py  ConfigGenerator.py  ConfigWriterIndicator.py  DataLoader.py  Excel.py  ExcelColumn.py  ExcelOpen.py  Extractor.py  ExtractorDataLoader.py  File.py  Filepaths.py  NewConfig.py  NewConfigSettingsEnum.py  NewExtractor.py  NewFeatureGrouper.py  NewFeatureReducer.py  NewStorage.py  NewTimer.py  Timer.py  UMAPBuilder.py
processing/processing/clusterings/: AutoConsensusClustering.py  Clustering.py  ClusteringName.py
processing/processing/commands/: compute.py  config.py  hello.py  (+4 more)
processing/tests/: _utils.py  conftest.py  test_000_init.py  test_001_refresh_configuration.py  test_002_extract_aggregate.py  test_cli.py  test_cli_main.py  test_extraction_vggish.py  test_main.py
(+2894 files in other folders)
