[build-system]
requires = ["setuptools==76.1.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sse = "processing.cli:start_processing"
sse_download = "processing.cli:download"

[project]
# INFO: When changing `name`, also change in `utils/get_version_from_setup.py`
name = "sound-scape-explorer"
version = "13.9.0"
description = "SoundScapeExplorer"
authors = [{ name = "Bamdad Sabbagh", email = "hi@bamdad.fr" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "~=3.11"

dependencies = [
  "wheel",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "h5py==3.13.0",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "umap-learn==0.5.7",
  "hdbscan==0.8.40",
  "scikit-learn==1.6.1",
  "scikit-maad==1.4.3",
  "pydub==0.25.1",
  "mutagen==1.47.0",
  "rich==14.0.0",
  "inquirerpy==0.3.4",
  "soundfile==0.13.1",
  "pydantic==2.11.1",
]

[project.optional-dependencies]
dev = [
  "black==23.12.1",
  "pytest==7.2.1",
  "pyright==1.1.397",
  "build==1.2.1",
]
