[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sse = "processing.cli:main"
sse_download = "processing.cli:download"
sse_install_cuda = "processing.cli:install_cuda"

[project]
# INFO: When changing `name`, also change in `utils/get_version_from_setup.py`
name = "sound-scape-explorer"
version = "14.0.13"
description = "SoundScapeExplorer"
authors = [{ name = "Bamdad Sabbagh", email = "hi@bamdad.fr" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "~=3.11"

dependencies = [
  "wheel",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "h5py==3.13.0",
  "umap-learn==0.5.7",
  "scikit-learn==1.6.1",
  "scikit-maad==1.4.3",
  "rich==14.0.0",
  "inquirerpy==0.3.4",
  "pydantic==2.11.1",
  "pydantic_extra_types==2.10.6",
  "gdown==5.2.0",
  "librosa==0.11.0",
  "kagglehub==0.3.13",
  "tensorflow-hub==0.16.1",
  "keras==3.12.0",
  "tensorflow==2.20.0",
  "tf_keras==2.20.0",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "pytest==8.3.5",
  "pyright==1.1.398",
  "build==1.2.1",
  "scipy-stubs==1.16.3.3",
  "pandas-stubs==2.3.2.250827",
  "pip-audit==2.10.0",
  # forcing infrastructure package to secure versions
  "setuptools==80.9.0",
  "urllib3==2.6.2",
  "fonttools==4.61.1",
  "pillow==11.3.0",
  "protobuf==6.33.2",
  "requests==2.32.5",
  "werkzeug==3.1.4",
]
